force-app/main/default/objects/Dinner__c/fields/External_Auto__c.field-meta.xml
<CustomField>
    <fullName>External_Auto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Auto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>