force-app/main/default/objects/Dinner__c/fields/FLS_Test_Dinner_PS__c.field-meta.xml
<CustomField>
    <fullName>FLS_Test_Dinner_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLS Test Dinner PS</label>
    <type>Checkbox</type>
</CustomField>