force-app/main/default/objects/Dinner__c/fields/LateDinner__c.field-meta.xml
<CustomField>
    <fullName>LateDinner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description New</description>
    <label>LateDinner</label>
    <type>Checkbox</type>
</CustomField>