force-app/main/default/objects/Dinner__c/fields/Picklist_Dinner_Table__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Dinner_Table__c</fullName>
    <label>Picklist Dinner Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dinner Table1</fullName>
            </value>
            <value>
                <fullName>Dinner Table2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>