force-app/main/default/objects/Dinner__c/fields/VS_Field1_Test_2__c.field-meta.xml
<CustomField>
    <fullName>VS_Field1_Test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VS Field1 Test 2</label>
    <type>Checkbox</type>
</CustomField>