force-app/main/default/objects/Dinner__c/fields/VS_Field2_Test_2__c.field-meta.xml
<CustomField>
    <fullName>VS_Field2_Test_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VS Field2 Test 2</label>
    <length>13</length>
    <type>Text</type>
</CustomField>