force-app/main/default/objects/Dinner__c/fields/VS_Field3_Test_2__c.field-meta.xml
<CustomField>
    <fullName>VS_Field3_Test_2__c</fullName>
    <label>VS Field3 Test 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>