force-app/main/default/objects/Dinner__c/fields/VS_PS_Test_D__c.field-meta.xml
<CustomField>
    <fullName>VS_PS_Test_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VS PS Test D</label>
    <type>Checkbox</type>
</CustomField>