force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT10.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT10</fullName>
    <active>false</active>
    <label>Dinner RT10</label>
</RecordType>