force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT2.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT2</fullName>
    <active>true</active>
    <label>Dinner RT2</label>
</RecordType>