force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT3.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT3</fullName>
    <active>true</active>
    <label>Dinner RT3</label>
</RecordType>