force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT4.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT4</fullName>
    <active>true</active>
    <label>Dinner RT4</label>
</RecordType>