force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT5.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT5</fullName>
    <active>true</active>
    <label>Dinner RT5</label>
</RecordType>