force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT6.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT6</fullName>
    <active>true</active>
    <label>Dinner RT6</label>
</RecordType>