force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT7.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT7</fullName>
    <active>true</active>
    <label>Dinner RT7</label>
</RecordType>