force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT8.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT8</fullName>
    <active>true</active>
    <label>Dinner RT8</label>
</RecordType>