force-app/main/default/objects/Dinner__c/recordTypes/Dinner_RT9.recordType-meta.xml
<RecordType>
    <fullName>Dinner_RT9</fullName>
    <active>true</active>
    <label>Dinner RT9</label>
</RecordType>